Fixed destacados section  whitespace

--- a/themes/Newspaper/includes/less_files/custom_style_cna.less
+++ b/themes/Newspaper/includes/less_files/custom_style_cna.less
@@ -2381,6 +2381,9 @@ div[class*="post-template-cna"] {
 					background-color: @color_7;
 					top: 0;
 					bottom: auto;
+					@media screen and (min-width: 768px){
+						min-height: 119px;
+					}
 				}
 				.td-big-grid-meta {
 					margin: 15px 15px;
